--- a/src/app/core/admin/end-user-agreement/manage-eua.component.html
+++ b/src/app/core/admin/end-user-agreement/manage-eua.component.html
@@ -6,54 +6,44 @@
 	</a>
 
 	<form novalidate name="euaForm" autocomplete="off" class="form-horizontal" role="form"
-		data-ng-submit="updateEua(euaForm.$valid)" >
+		data-ng-submit="updateEua(euaForm.$valid)">
 
-		<div class="page-header">
-			<h3>
-				{{title}}
-				<small>{{subtitle}}</small>
-			</h3>
-		</div>
+		<h2>
+			{{title}}
+			<small>{{subtitle}}</small>
+		</h2>
 
 		<!-- Alert Notifications ->
 		<div class="word-wrap" data-alert data-ng-repeat="alert in alertService.alerts" data-type="{{alert.type}}" data-close="alertService.clear($index)">{{alert.msg}}</div> -->
 
 		<!-- Basic Information -->
-		<div class="col-md-12 form-group">
-			<label class="control-label" for="title">Title of the Agreement
-		<span class="text-danger">
-		  <strong> *</strong>
-		</span>
-	  </label>
+		<div class="form-group">
+			<label class="form-required" for="title">Title of the Agreement</label>
 			<div>
-		<input type="text" class="form-control" id="title" name="title" [(ngModel)]="eua.euaModel.title" required />
-	  </div>
-		</div>
-
-		<div class="col-md-12 form-group">
-			<label class="control-label" for="text">Text Content of the Agreement
-		<span class="text-danger">
-		  <strong> *</strong>
-		</span>
-	  </label>
-			<div>
-				<textarea rows="16" class="form-control" id="text" name="text" [(ngModel)]="eua.euaModel.text" required></textarea>
+				<input type="text" class="form-control" id="title" name="title" [(ngModel)]="eua.euaModel.title" required />
 			</div>
 		</div>
 
-		<div class="col-md-12 form-group" *ngIf="error">
+		<div class="form-group">
+			<label class="form-required" for="text">Text Content of the Agreement</label>
+			<div>
+				<textarea style="height: 20rem" class="form-control" id="text" name="text" [(ngModel)]="eua.euaModel.text" required></textarea>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="float-right">
+				<button type="button" class="btn btn-link mr-2" [routerLink]="['/admin/euas']">Cancel</button>
+				<button type="button" class="btn btn-outline-secondary mr-2" (click)="previewEua()">Preview</button>
+				<button type="button" class="btn btn-primary" (click)="submitEua()">{{submitText}}</button>
+			</div>
+		</div>
+
+		<div class="form-group" *ngIf="error">
 			<div class="float-right">
 				<div class="text-danger">
 					<strong>{{error}}</strong>
 				</div>
-			</div>
-		</div>
-
-		<div class="col-md-12">
-			<div class="btn-group float-right">
-				<button type="button" class="btn btn-link" [routerLink]="['/admin/euas']">Cancel</button>
-				<button type="button" class="btn btn-outline-secondary" (click)="previewEua()">Preview</button>
-				<button type="button" class="btn btn-primary" (click)="submitEua()">{{submitText}}</button>
 			</div>
 		</div>
 	</form>
