--- a/src/app/core/signin/signin.component.scss
+++ b/src/app/core/signin/signin.component.scss
@@ -1,15 +1,5 @@
-.signin-loading-container {
-
-	margin: 64px auto 0 auto;
-}
+@import '../../../styles/colors';
 
 .signin-container {
-
 	width: 240px;
-	margin: 2rem auto 0 auto;
-
-	.btn-primary {
-		margin-right: 10px;
-	}
-
 }
