--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -1,9 +1,9 @@
-<section class="p-3">
+<section class="pt-3">
 	<h3 class="pb-3">
 		Team Members
 
 		<div class="float-right" *ngIf="canManageTeam">
-			<button type="button" class="btn btn-primary" (click)="addMembers()"><span class="fa fa-plus"></span> Add New</button>
+			<button type="button" class="btn btn-sm btn-primary" (click)="addMembers()"><span class="fa fa-plus"></span> Add New</button>
 		</div>
 	</h3>
 
