--- a/src/app/core/teams/edit-team-metadata/edit-team-metadata.component.html
+++ b/src/app/core/teams/edit-team-metadata/edit-team-metadata.component.html
@@ -1,4 +1,4 @@
-<section class="p-3">
+<section class="pt-3">
 	<form #form="ngForm" (ngSubmit)="save()" autocomplete="off" role="form" novalidate>
 		<h3>
 			Edit Team<br/>
@@ -6,12 +6,12 @@
 		</h3>
 
 		<!-- Required Indicator -->
-		<div>
+		<div class="pb-3">
 			<span><span class="text-danger"><strong> *</strong></span> Required</span>
 		</div>
 
 		<!-- Team Name -->
-		<div class="form-group pt-4">
+		<div class="form-group">
 			<label class="control-label form-required" for="name">Team Name</label>
 			<input type="text" class="form-control" id="name" name="name" [(ngModel)]="team.name" required/>
 		</div>
@@ -19,7 +19,7 @@
 		<!-- Description -->
 		<div class="form-group">
 			<label class="control-label" for="description">Description</label>
-			<textarea rows="4" class="form-control" id="description" name="description" [(ngModel)]="team.description"></textarea>
+			<textarea rows="4" class="form-control" style="height: 6rem" id="description" name="description" [(ngModel)]="team.description"></textarea>
 		</div>
 
 		<!-- External Groups -->
